# javaAdsWrapper

./: .gitignore  CMakeBuildInstructions.sh  build.gradle  settings.gradle
com/forester/: AdsLib.java
src/main/cpp/: .gitignore  AdsLibJava_wrap.cxx  CMakeLists.txt  Makefile
src/main/cpp/TwinCAT/: AdsDef.h  AdsLib.h
src/main/cpp/testDeployment/: CreateTcBsdVM.sh
src/main/java/com/forester/: AdsLib.java  AdsLibConfig.java  AdsLibExample.java  wireshark.txt
